src/objects/Performance_Indicator__c.object
<CustomObject>
    <description>This is the primary object for the Measures Catalog application. This object tracks performance Indicators.</description>
    <fields>
        <fullName>Calculation_Methodology__c</fullName>
        <inlineHelpText>Provide the algorithm that you use to calculate it if there is an algorithm.</inlineHelpText>
        <label>Calculation Methodology</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dashboard_Link__c</fullName>
        <inlineHelpText>A URL or other pathway where the measure is being reported. If none is available, please enter &quot;N/A&quot; in this field</inlineHelpText>
        <label>Dashboard/Data link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Limitations__c</fullName>
        <label>Data Limitations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Explanation__c</fullName>
        <label>Data Quality Explanation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Quality__c</fullName>
        <inlineHelpText>Level of confidence in the accuracy/reliability of the data. This should reflect the quality of data verification
and certification</inlineHelpText>
        <label>Data Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <inlineHelpText>The originator(s) of the data used in to perform the measurement. Each source should be a system/application. If there are multiple source, each source should be separated by a comma and space. All acronyms used should be spelt out and explained.</inlineHelpText>
        <label>Data Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Denominator_Definition__c</fullName>
        <inlineHelpText>You have 255 characters</inlineHelpText>
        <label>Denominator Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denominator_Unit_of_Measurement__c</fullName>
        <label>Denominator Unit of Measurement</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A plain language description of the Performance Indicator and its outputs</inlineHelpText>
        <label>Performance Indicator Definition</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Indicator_Direction__c</fullName>
        <label>Desired Indicator Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>Decreasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IS_Percent__c</fullName>
        <label>IS Percent?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicator_Category__c</fullName>
        <label>Indicator Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APG</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>SSPP</fullName>
                </value>
                <value>
                    <fullName>CAP</fullName>
                </value>
                <value>
                    <fullName>Agency Internal</fullName>
                </value>
                <value>
                    <fullName>SSO</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicator_Type__c</fullName>
        <label>Indicator Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Input</fullName>
                </value>
                <value>
                    <fullName>Output</fullName>
                </value>
                <value>
                    <fullName>Contextual</fullName>
                </value>
                <value>
                    <fullName>Efficiency</fullName>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
                <value>
                    <fullName>Outcome</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicator_Units__c</fullName>
        <label>Indicator Units</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numerator_Definition__c</fullName>
        <inlineHelpText>You Have 255 Characters</inlineHelpText>
        <label>Numerator Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numerator_Unit_of_Measurement__c</fullName>
        <label>Numerator Unit of Measurement</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perf_Indicator_Duplicate_Hidden__c</fullName>
        <label>Perf Indicator Duplicate Hidden</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Performance_Goal_Lead_Organization__c</fullName>
        <label>Performance Goal Lead Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office of the Administrator (A)</fullName>
                </value>
                <value>
                    <fullName>Office of Civil Rights (AR)</fullName>
                </value>
                <value>
                    <fullName>Office of the Chief Financial Officer (B)</fullName>
                </value>
                <value>
                    <fullName>Ofc of the Chief People Officer (C)</fullName>
                </value>
                <value>
                    <fullName>Ofc of Emergency Response &amp; Recovery (D)</fullName>
                </value>
                <value>
                    <fullName>Office of Small Business Utilization (E)</fullName>
                </value>
                <value>
                    <fullName>GSA Board of Contract Appeals (G)</fullName>
                </value>
                <value>
                    <fullName>Office of Administrative Services (H)</fullName>
                </value>
                <value>
                    <fullName>Ofc of the Chief Information Officer (I)</fullName>
                </value>
                <value>
                    <fullName>Office of General Counsel (L)</fullName>
                </value>
                <value>
                    <fullName>Office of Governmentwide Policy (M)</fullName>
                </value>
                <value>
                    <fullName>Public Buildings Service (P)</fullName>
                </value>
                <value>
                    <fullName>Federal Acquisition Service (Q)</fullName>
                </value>
                <value>
                    <fullName>Ofc of Congr&apos;l &amp; Intergovt&apos;l Affairs (S)</fullName>
                </value>
                <value>
                    <fullName>Ofc of Citizens Svcs &amp; Innovative Tech (X)</fullName>
                </value>
                <value>
                    <fullName>Ofc of Communications &amp; Marketing (Z)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_Goal_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Performance Goal Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>GSA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Performance Indicators (Performance Goal Leader)</relationshipLabel>
        <relationshipName>Performance_Measures1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performance_Goal_Type__c</fullName>
        <label>Performance Goal Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cross Agency Priority Goal (CAP)</fullName>
                </value>
                <value>
                    <fullName>Agency Priority Goal (APG)</fullName>
                </value>
                <value>
                    <fullName>Performance Goal Reported in Budget (Budget)</fullName>
                </value>
                <value>
                    <fullName>Sustainability Performance Goal (Sustainability)</fullName>
                </value>
                <value>
                    <fullName>Internal Performance Goal (Internal)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_Goal__c</fullName>
        <description>SSO performance Goals - Dependent on Strat Goal or on Strat Objective</description>
        <label>Performance Goal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Indicator_Data_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performance Indicator Data Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>GSA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Performance Indicators (Performance Indicator Functional POC)</relationshipLabel>
        <relationshipName>Performance_Measures4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performance_Indicator_End_Fiscal_Year__c</fullName>
        <label>Performance Indicator End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Performance_Indicator_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performance Indicator Leader</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>GSA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Performance Indicators (Performance Indicator Leader)</relationshipLabel>
        <relationshipName>Performance_Measures2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performance_Indicator_Origination_Date__c</fullName>
        <label>Performance Indicator Origination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Performance_Indicator_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Performance Indicator Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>GSA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Performance Indicators (Performance Indicator Data Owner)</relationshipLabel>
        <relationshipName>Performance_Indicators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performance_Indicator_Reporting_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performance Indicator Reporting POC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>GSA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Performance Indicators (Performance Indicator Reporting POC)</relationshipLabel>
        <relationshipName>Performance_Measures3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Frequency__c</fullName>
        <inlineHelpText>The number of times the measure is published per year or how many times per year this measure is reported.</inlineHelpText>
        <label>Reporting Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Bi-annually (Twice per year)</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Lag__c</fullName>
        <label>Reporting Lag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>less than 1 week</fullName>
                </value>
                <value>
                    <fullName>2 weeks</fullName>
                </value>
                <value>
                    <fullName>3 weeks</fullName>
                </value>
                <value>
                    <fullName>4 weeks</fullName>
                </value>
                <value>
                    <fullName>5 weeks</fullName>
                </value>
                <value>
                    <fullName>6 weeks</fullName>
                </value>
                <value>
                    <fullName>7 weeks</fullName>
                </value>
                <value>
                    <fullName>8 weeks</fullName>
                </value>
                <value>
                    <fullName>2 months</fullName>
                </value>
                <value>
                    <fullName>3 months</fullName>
                </value>
                <value>
                    <fullName>4 months</fullName>
                </value>
                <value>
                    <fullName>5 months</fullName>
                </value>
                <value>
                    <fullName>6 months</fullName>
                </value>
                <value>
                    <fullName>7 months</fullName>
                </value>
                <value>
                    <fullName>8 months</fullName>
                </value>
                <value>
                    <fullName>9 months</fullName>
                </value>
                <value>
                    <fullName>10 months</fullName>
                </value>
                <value>
                    <fullName>11 months</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible_Program__c</fullName>
        <inlineHelpText>The Program within the identified SSO for performing a measurement</inlineHelpText>
        <label>Program Responsible for the Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin-Ofc of the Assistant Administrator(AF)</fullName>
                </value>
                <value>
                    <fullName>Admin-Ofc of the Associate Administrator(AG)</fullName>
                </value>
                <value>
                    <fullName>Admin-Ofc of the Sen Counselor to the Admin(AE)</fullName>
                </value>
                <value>
                    <fullName>Admin-Office of Management Services(AC)</fullName>
                </value>
                <value>
                    <fullName>Admin-Office of the Administrator(A)</fullName>
                </value>
                <value>
                    <fullName>Admin-Office of the Administrator(AA)</fullName>
                </value>
                <value>
                    <fullName>Admin-Office of the Administrator(AM)</fullName>
                </value>
                <value>
                    <fullName>Admin-Office of the Deputy Administrator(AD)</fullName>
                </value>
                <value>
                    <fullName>CBCA-GSA Board of Contract Appeals(G)</fullName>
                </value>
                <value>
                    <fullName>CBCA-GSA Board of Contract Appeals(GW)</fullName>
                </value>
                <value>
                    <fullName>CBCA-Judicial Division(GJ)</fullName>
                </value>
                <value>
                    <fullName>CBCA-Staff Support Division(GA)</fullName>
                </value>
                <value>
                    <fullName>CFO-Ofc of Financial Policy &amp; Operations(BC)</fullName>
                </value>
                <value>
                    <fullName>CFO-Office of Budget(BB)</fullName>
                </value>
                <value>
                    <fullName>CFO-Office of Budget(BE)</fullName>
                </value>
                <value>
                    <fullName>CFO-Office of Financial Management Systems(BD)</fullName>
                </value>
                <value>
                    <fullName>CFO-Office of the Chief Financial Officer(B)</fullName>
                </value>
                <value>
                    <fullName>CFO-Office of the Chief Financial Officer(BU)</fullName>
                </value>
                <value>
                    <fullName>CFO-Program Management Office(BP)</fullName>
                </value>
                <value>
                    <fullName>CIO-Ofc of the Chief Information Officer(I)</fullName>
                </value>
                <value>
                    <fullName>CIO-Office of Enterprise Infrastructure(IO)</fullName>
                </value>
                <value>
                    <fullName>CIO-Office of Enterprise Mgmt Services(IE)</fullName>
                </value>
                <value>
                    <fullName>CIO-Office of Enterprise Solutions(IA)</fullName>
                </value>
                <value>
                    <fullName>CIO-Office of the Deputy CIO(ID)</fullName>
                </value>
                <value>
                    <fullName>CIO-Resources Management Staff(IR)</fullName>
                </value>
                <value>
                    <fullName>CIO-Sr Agency Info Security Officer Staff(IS)</fullName>
                </value>
                <value>
                    <fullName>CPO-Ofc of the Chief People Officer(C)</fullName>
                </value>
                <value>
                    <fullName>CPO-Ofc of the Chief People Officer(CB)</fullName>
                </value>
                <value>
                    <fullName>CPO-Office of Executive Resources(CX)</fullName>
                </value>
                <value>
                    <fullName>CPO-Office of Human Capital Management(CH)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_or_Service_Office__c</fullName>
        <inlineHelpText>The SSO responsible for performing a measurement</inlineHelpText>
        <label>Staff or Service Office (SSO)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>PBS</fullName>
                </value>
                <value>
                    <fullName>OGP</fullName>
                </value>
                <value>
                    <fullName>OCFO</fullName>
                </value>
                <value>
                    <fullName>OCPO</fullName>
                </value>
                <value>
                    <fullName>OCIO</fullName>
                </value>
                <value>
                    <fullName>OCIA</fullName>
                </value>
                <value>
                    <fullName>OCSIT</fullName>
                </value>
                <value>
                    <fullName>OCM</fullName>
                </value>
                <value>
                    <fullName>OSBU</fullName>
                </value>
                <value>
                    <fullName>OGC</fullName>
                </value>
                <value>
                    <fullName>OCR</fullName>
                </value>
                <value>
                    <fullName>OERR</fullName>
                </value>
                <value>
                    <fullName>OAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>If the measure is in use, choose &quot;Active.&quot; If it is no longer used, choose &quot;Retired.&quot; If it is used for tracking or establishing a baseline, choose &quot;Inactive.&quot; If it is under consideration as a future measure, choose &quot;Proposed.&quot;</inlineHelpText>
        <label>Indicator Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Goals_Supported__c</fullName>
        <inlineHelpText>Operational Excellence, Customer Intimacy, Innovation</inlineHelpText>
        <label>Strategic Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_Objective__c</fullName>
        <description>GSA Strategic Objectives - Dependent on Strategic Goal.</description>
        <label>Strategic Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Performance Indicator</label>
    <listViews>
        <fullName>All_Performance_Indicators</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Indicator_Type__c</columns>
        <columns>Reporting_Frequency__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Indicator_Units__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Performance Indicators</label>
        <sharedTo>
            <group>Performance_Management_Tool_BBI_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GSA_PMT_All_Active_Indicators</fullName>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>GSA PMT All Active Indicators</label>
    </listViews>
    <listViews>
        <fullName>GSA_PMT_FAS_Performance_Indicators</fullName>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff_or_Service_Office__c</field>
            <operation>equals</operation>
            <value>FAS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>GSA PMT FAS Performance Indicators</label>
    </listViews>
    <listViews>
        <fullName>GSA_PMT_OAS_Performance_Indicators</fullName>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff_or_Service_Office__c</field>
            <operation>equals</operation>
            <value>OAS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>GSA PMT OAS Performance Indicators</label>
    </listViews>
    <listViews>
        <fullName>GSA_PMT_OCFO_Performance_Indicators</fullName>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff_or_Service_Office__c</field>
            <operation>equals</operation>
            <value>OCFO</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>GSA PMT OCFO Performance Indicators</label>
    </listViews>
    <listViews>
        <fullName>GSA_PMT_OCIO_Performance_Indicators</fullName>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff_or_Service_Office__c</field>
            <operation>equals</operation>
            <value>OCIO</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>GSA PMT OCIO Performance Indicators</label>
    </listViews>
    <listViews>
        <fullName>GSA_PMT_OCM_Performance_Indicators</fullName>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff_or_Service_Office__c</field>
            <operation>equals</operation>
            <value>OCM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>GSA PMT OCM Performance Indicators</label>
    </listViews>
    <listViews>
        <fullName>GSA_PMT_OCPO_Performance_Indicators</fullName>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff_or_Service_Office__c</field>
            <operation>equals</operation>
            <value>OCPO</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>GSA PMT OCPO Performance Indicators</label>
    </listViews>
    <listViews>
        <fullName>GSA_PMT_OCR_Performance_Indicators</fullName>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff_or_Service_Office__c</field>
            <operation>equals</operation>
            <value>OCR</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>GSA PMT OCR Performance Indicators</label>
    </listViews>
    <listViews>
        <fullName>GSA_PMT_OCSIT_Performance_Indicators</fullName>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff_or_Service_Office__c</field>
            <operation>equals</operation>
            <value>OCSIT</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>GSA PMT OCSIT Performance Indicators</label>
    </listViews>
    <listViews>
        <fullName>GSA_PMT_OERR_Performance_Indicators</fullName>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff_or_Service_Office__c</field>
            <operation>equals</operation>
            <value>OERR</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>GSA PMT OERR Performance Indicators</label>
    </listViews>
    <listViews>
        <fullName>GSA_PMT_OGC_Performance_Indicators</fullName>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff_or_Service_Office__c</field>
            <operation>equals</operation>
            <value>OGC</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>GSA PMT OGC Performance Indicators</label>
    </listViews>
    <listViews>
        <fullName>GSA_PMT_OGP_Performance_Indicators</fullName>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff_or_Service_Office__c</field>
            <operation>equals</operation>
            <value>OGP</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>GSA PMT OGP Performance Indicators</label>
    </listViews>
    <listViews>
        <fullName>GSA_PMT_OSBU_Performance_Indicators</fullName>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff_or_Service_Office__c</field>
            <operation>equals</operation>
            <value>OSBU</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>GSA PMT OSBU Performance Indicators</label>
    </listViews>
    <listViews>
        <fullName>GSA_PMT_PBS_Performance_Indicators</fullName>
        <columns>Strategic_Goals_Supported__c</columns>
        <columns>Performance_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff_or_Service_Office__c</field>
            <operation>equals</operation>
            <value>PBS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>GSA PMT PBS Performance Indicators</label>
    </listViews>
    <nameField>
        <label>Performance Indicator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performance Indicators</pluralLabel>
    <recordTypes>
        <fullName>Perf_Indicator_Read_Only</fullName>
        <active>true</active>
        <label>Perf Indicator Read Only</label>
    </recordTypes>
</CustomObject>